<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="accept_pp">Accept <a href="https://www.liber8tech.com/privacypolicy.html">Privacy Policy</a></string>
    <string name="accept_toc">Accept <a href="https://www.liber8tech.com/termsofconditions.html">Terms of Use</a></string>
    <string name="add_device">Add Device</string>
    <string name="add_device_subtitle">"If your bracelet not listed below, please use the
 charger to activate Bluetooth in Tago "<Arc class=""></Arc></string>
    <string name="add_device_title">Pair your bracelet</string>
    <string name="already_deleted">Device already deleted</string>
    <string name="already_paired">Already paired by other user</string>
    <string name="app_name">Tago App</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attachment_details">Please note that we found more than one codes in the shared document, but only the first match will be generated.</string>
    <string name="attachment_title">Generating QR code for your Tago</string>
    <string name="auth_email">EMAIL</string>
    <string name="auth_email_error">Incorrect email</string>
    <string name="auth_error_bad_credentials">Invalid email or password</string>
    <string name="auth_error_communication">Internet connection error</string>
    <string name="auth_error_user_exists">Email already taken</string>
    <string name="auth_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="auth_first">FIRST</string>
    <string name="auth_last">LAST</string>
    <string name="auth_logout">Logout</string>
    <string name="auth_logout_title">Do you want to logout?</string>
    <string name="auth_password">PASSWORD</string>
    <string name="auth_password_change">Change password</string>
    <string name="auth_password_current">CURRENT</string>
    <string name="auth_password_error_character">At least %1$d characters</string>
    <string name="auth_password_error_match">The passwords you typed do not match</string>
    <string name="auth_password_new">NEW PASSWORD</string>
    <string name="auth_password_verify">VERIFY PASSWORD</string>
    <string name="auth_required">Required field</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_sign_up">Sign up</string>
    <string name="auto_upload">Auto Image Upload</string>
    <string name="battery">Battery</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_off_subtitle">"You cannot add device while your bluetooth
 and location unavailable."</string>
    <string name="bluetooth_off_title">BLUETOOTH &amp; LOCATION</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bt_turned_off">Bluetooth is turned off</string>
    <string name="camera">Camera</string>
    <string name="camera_image_use">Use</string>
    <string name="camera_permission_rationale">We need camera permission to take pictures for your tago.</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="collection">COLLECTION</string>
    <string name="color">Color</string>
    <string name="com.crashlytics.android.build_id">0ce9825f-3cc4-47f1-a78d-f62d2f041503</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contact_us">Contact Us</string>
    <string name="create_photo">Create Photo</string>
    <string name="created">Created</string>
    <string name="decline">Decline</string>
    <string name="delete">Unpair</string>
    <string name="delete_data">Delete stored account information</string>
    <string name="delete_pattern">Delete</string>
    <string name="delete_title">Delete this device?</string>
    <string name="devices">Devices</string>
    <string name="disable">Disable</string>
    <string name="email">support@liber8tech.com</string>
    <string name="empty_collection">"I don't have a thing to wear"</string>
    <string name="empty_qr">No QR code in the document</string>
    <string name="enable">Enable</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="intro_title">"One bracelet
Endless design"</string>
    <string name="intro_title_sub">"The Tago Arc is a durable premium quality accessory that always matches the wearer's mood and clothing."</string>
</resources>