<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ProgressBar android:id="@id/progressBarSignup" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:indeterminateOnly="true" style="?android:progressBarStyleHorizontal" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <com.liber8tech.tago.android.view.TextInputView android:id="@id/textInputEmailSignUp" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <com.liber8tech.tago.android.view.TextInputView android:id="@id/textInputPasswordSignUp" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <com.liber8tech.tago.android.view.CheckBox android:textColor="@color/white" android:layout_gravity="start" android:id="@id/checkToC" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/accept_toc" android:layout_marginStart="16.0dip" />
        <com.liber8tech.tago.android.view.CheckBox android:textColor="@color/white" android:layout_gravity="start" android:id="@id/checkPP" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/accept_pp" android:layout_marginStart="16.0dip" />
    </LinearLayout>
    <com.liber8tech.tago.android.view.TagoButton android:layout_gravity="bottom" android:id="@id/btnSignUp" android:layout_width="fill_parent" android:layout_height="@dimen/height_sign_button" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="64.0dip" android:text="@string/auth_sign_up" style="?android:borderlessButtonStyle" />
</LinearLayout>